--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
 <head>
 
-<title>Page Title</title>
+<title>Working with git</title>
 </head>
 <body>
-<h1>Header</h1>
+<h1>Working with git</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>
+        Befehl
+      </th>
+      <th>
+        Beschreibung
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>atom .</td>
+    <td>öffnet Atom im aktuellen Verzeichnis </td>
+  </tr>
+  <tr>
+    <td>git init</td>
+    <td>Git Repo initialisiert</td>
+  </tr>
+  <tr>
+    <td>git status</td>
+    <td>Zeigt den Status des git-repo (vor allem Dateien, die nicht im Git Repo sind und alle Dateien, die nicht "eingecheckt" sind)</td>
+  </tr>
+  <tr>
+    <td>git add .</td>
+    <td>Fügt alle Dateien aus dem aktuellen Verzeichnis dem Git Repo zu (Punkt durch Dateinamen ersetzen für einelne Datei)</td>
+  </tr>
+  <tr>
+    <td>git commit -m "Message"</td>
+    <td>"einchecken" mit Kommentar ("Message")</td>
+  </tr>
+  </tbody>  
+</table>
+
 </body>
 </html>
