--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
 <title>Working with git</title>
+
+<link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
 </head>
 <body>
 <h1>Working with git</h1>
