--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <title>Working with git</title>
-
-<link rel="stylesheet" type="text/css" href="styles/styles.css"></link>
+<link rel="stylesheet" type="text/css" href="styles/styles.css" />
+<script type="text/javascript" src="scripts/index.js"></script>
 </head>
 <body>
 <h1>Working with git</h1>
