--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="scripts/index.js"></script>
 </head>
 <body>
-<h1>Working with git</h1>
+<h1>Arbeite mit git</h1>
 
 <table>
   <thead>
